# pseudo_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mk.bat
src/: bit_mayhem_app.cpp  player.hpp  prefabs.hpp  spawner.hpp  test_app.cpp
src/pe/: actor.hpp  app.cpp  app.hpp  components.hpp  scene.hpp  systems.hpp  variant.hpp
src/pe/components/: animation.hpp  basic.hpp  physics.hpp
